# stacksafe

./: Cargo.toml  README.md  rustfmt.toml
.github/: semantic.yml
.github/workflows/: ci.yml
stacksafe/: Cargo.toml
stacksafe-macro/: Cargo.toml
stacksafe-macro/src/: lib.rs
stacksafe/src/: internal.rs  lib.rs
stacksafe/tests/: test.rs
