# Copyright 2025 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["stacksafe", "stacksafe-macro"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/fast/stacksafe"
rust-version = "1.85.0"
version = "1.0.0"

[workspace.dependencies]
# workspace dependencies
stacksafe = { version = "1.0.0", path = "stacksafe" }
stacksafe-macro = { version = "=1.0.0", path = "stacksafe-macro" }

# crates.io dependencies
proc-macro-error2 = { version = "2" }
quote = { version = "1" }
serde = { version = "1" }
stacker = { version = "0.1" }
syn = { version = "2" }
