# Copyright 2025 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "stacksafe"

categories = ["memory-management", "rust-patterns"]
description = "Prevent stack overflow in deeply recursive functions with automatic stack management."
documentation = "https://docs.rs/stacksafe"
keywords = ["recursion", "recursive", "stacker", "stack", "overflow"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Provides stack-safe visitor pattern implementations for `StackSafe<T>`.
derive-visitor = ["dep:derive-visitor"]
# Provides stack-safe serialization and deserialization for `StackSafe<T>`.
serde = ["dep:serde"]

[dependencies]
derive-visitor = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
stacker = { workspace = true }
stacksafe-macro = { workspace = true }
